@@ -24,6 +24,9 @@ debhelper (11.1.5) UNRELEASED; urgency=medium
     dbgsym building via DEB_BUILD_OPTIONS).  This regression
     was introduced in 11.1.  Thanks to Christian Marillat for
     reporting the bug.  (Closes: #890736)
+  * Dh_Lib: pkgfile() now properly uses for DEB_TARGET_ARCH{,_OS}
+    when the package is set to be built for the target
+    architecture.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000
 
